test/good/lambdas/lambda11.px

func f(g: Int?->Int, x: Int?): Int def
    return g(x)

x: Int? = 5
print f(_!, x)

x = null
print f(_ ?? 3, x)
print f(_ is null ? 1 : 0, x)

func f'(g: Int?->Float?, x: Int?): Float? def
    return g(x)

print f'(_?.toString()?.toFloat(), x)
