test/bad/generics/call02.px

func f(Int x) Int def
    return x

func g<T>(T x) def
    print f(x)

g('0')
